<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TimePicker
        android:id="@+id/timePickStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/checkBox4" />
    
    <TextView
        android:id="@+id/textStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/timestart"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TimePicker
        android:id="@+id/TimePickerEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timePickStart"
        android:layout_below="@+id/timePickStart"
        android:layout_marginTop="18dp" />
    
    <TextView
        android:id="@+id/textEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/TimePickerEnd"
        android:text="@string/timeend"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TimePickerEnd"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:text="@string/sunday" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_centerHorizontal="true"
        android:checked="true"
        android:text="@string/monday" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_alignParentRight="true"
        android:checked="true"
        android:text="@string/tuesday" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkBox1"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:text="@string/wednesday" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox4"
        android:layout_alignBottom="@+id/checkBox4"
        android:layout_centerHorizontal="true"
        android:checked="true"
        android:text="@string/thursday" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox4"
        android:layout_alignBottom="@+id/checkBox4"
        android:layout_alignParentRight="true"
        android:checked="true"
        android:text="@string/friday" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox5"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:checked="true"
        android:text="@string/saturday" />

    <Button
        android:id="@+id/pushTimeSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/set"
        android:onClick="pushTimeSet" />
</RelativeLayout>